--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/config/routes.js"></script>
+        <script src="scripts/config/log.js"></script>
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/contact.js"></script>
