- add pagination - add sortIcon directive - update the tests

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
+    <!-- here goes things that are not in specified in bower.json but you want them minified -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
@@ -59,6 +60,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/ng-lodash/build/ng-lodash.js"></script>
     <!-- endbower -->
+    <!-- here goes things that are not in specified in bower.json but you want them minified -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -69,6 +71,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/contact.js"></script>
         <script src="scripts/services/item.js"></script>
+        <script src="scripts/directives/sort-icon.js"></script>
         <!-- endbuild -->
 </body>
 </html>
